<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control_msgs</name>
  <version>0.1.0</version>
  <description>ROS msgs for legged robot control</description>

  <maintainer email="dennis.mronga@dfki.de">Dennis Mronga</maintainer>
  <license>BSD-3</license>
  <url type="https://github.com/dfki-ric-underactuated-lab/robot_control_msgs"></url>
  <author email="dennis.mronga@dfki.de">Dennis Mronga</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
